Initial EGL implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.20)
 
 project(offscreen)
 
-find_package(OpenGL REQUIRED)
+find_package(OpenGL REQUIRED COMPONENTS OpenGL EGL)
+message(STATUS "OPENGL_LIBRARIES: ${OPENGL_egl_LIBRARY}")
 find_package(glfw3 REQUIRED)
 
 add_executable(offscreen)
@@ -16,6 +17,9 @@ if(APPLE)
       )
 endif(APPLE)
 
+set(SRCS_EGL
+    src/OffscreenContextEGL.cc
+)
 set(SRCS
     src/main.cc
     src/CommandLine.cc
@@ -23,9 +27,10 @@ set(SRCS
     src/OffscreenContext.cc
     src/GLFWContext.cc
     src/FBO.cc
+    ${SRCS_EGL}
     ${SRCS_APPLE}
     )
 
 target_sources(offscreen PRIVATE ${SRCS})
-target_link_libraries(offscreen glfw OpenGL::GL OpenGL::GLU)
+target_link_libraries(offscreen glfw OpenGL::OpenGL OpenGL::EGL OpenGL::GLU)
 set_property(TARGET offscreen PROPERTY CXX_STANDARD 17)
