Make GBM optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,11 @@ if (OpenGL_EGL_FOUND)
   endif()
   set(HAS_EGL TRUE)
 
-  find_package(GBM REQUIRED)
-  target_link_libraries(offscreen GBM::GBM)
+  find_package(GBM)
+  if (GBM_FOUND)
+    target_compile_definitions(offscreen PRIVATE HAS_GBM)
+    target_link_libraries(offscreen GBM::GBM)
+  endif()
 else()
   target_link_libraries(offscreen OpenGL::GL)
 endif()
