Initial support for GLX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,12 @@ else()
   target_link_libraries(offscreen OpenGL::GL)
 endif()
 if(OpenGL_GLX_FOUND)
-  set(HAS_GLX TRUE)
-  target_link_libraries(offscreen OpenGL::GLX)
+  find_package(X11 REQUIRED)
+  if(X11_FOUND)
+    set(HAS_GLX TRUE)
+    target_link_libraries(offscreen OpenGL::GLX X11::X11)
+    target_compile_definitions(offscreen PRIVATE ENABLE_GLX)
+  endif()
 endif()
 target_link_libraries(offscreen OpenGL::GLU)
 
