Improve GLX linkage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,21 @@ if(USE_GLAD)
 endif()
 
 find_package(OpenGL REQUIRED)
+if(TARGET OpenGL::OpenGL)
+  # GLVND systems
+  target_link_libraries(offscreen OpenGL::OpenGL)
+else()
+  # Non-GLVND systems
+  target_link_libraries(offscreen OpenGL::GL)
+endif()
+target_link_libraries(offscreen OpenGL::GLU)
 if (OpenGL_EGL_FOUND)
   if (TARGET OpenGL::EGL)
-    target_link_libraries(offscreen OpenGL::OpenGL OpenGL::EGL)
+    # GLVND systems
+    target_link_libraries(offscreen OpenGL::EGL)
   else()
-    # Some systems (e.g. Raspberry Pi) seem to not produce the OpenGL::* targets
-    target_link_libraries(offscreen ${OPENGL_LIBRARIES} ${OPENGL_egl_LIBRARY})
+    # Non-GLVND systems
+    target_link_libraries(offscreen ${OPENGL_egl_LIBRARY})
   endif()
   set(HAS_EGL TRUE)
 
@@ -35,18 +44,19 @@ if (OpenGL_EGL_FOUND)
     target_compile_definitions(offscreen PRIVATE HAS_GBM)
     target_link_libraries(offscreen GBM::GBM)
   endif()
-else()
-  target_link_libraries(offscreen OpenGL::GL)
 endif()
 if(OpenGL_GLX_FOUND)
   find_package(X11 REQUIRED)
   if(X11_FOUND)
+    if(TARGET OpenGL::OpenGL)
+      # For GLVND systems (non-GLVND systems have GLX included in the OpenGL libraries)
+      target_link_libraries(offscreen OpenGL::GLX)
+    endif()
     set(HAS_GLX TRUE)
-    target_link_libraries(offscreen OpenGL::GLX X11::X11)
+    target_link_libraries(offscreen X11::X11)
     target_compile_definitions(offscreen PRIVATE ENABLE_GLX)
   endif()
 endif()
-target_link_libraries(offscreen OpenGL::GLU)
 
 if(ENABLE_GLFW)
   find_package(glfw3 REQUIRED)
