Report GLVND status

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,13 @@ endif()
 option(USE_GLAD "Use GLAD for OpenGL function wrangling" ${USE_GLAD_DEFAULT})
 option(ENABLE_GLFW "Enable on-screen rendering using glfw" ON)
 
+set(HAS_GLVND FALSE)
+set(HAS_GLX FALSE)
+set(HAS_EGL FALSE)
+set(HAS_CGL FALSE)
+set(HAS_NSOPENGL FALSE)
+set(HAS_WGL FALSE)
+
 if(USE_GLAD)
   target_compile_definitions(offscreen PRIVATE USE_GLAD)
 endif()
@@ -24,6 +31,7 @@ find_package(OpenGL REQUIRED)
 if(TARGET OpenGL::OpenGL)
   # GLVND systems
   target_link_libraries(offscreen OpenGL::OpenGL)
+  set(HAS_GLVND TRUE)
 else()
   # Non-GLVND systems
   target_link_libraries(offscreen OpenGL::GL)
@@ -127,8 +135,9 @@ message(STATUS "====================================")
 message(STATUS "Build Configuration Summary")
 message(STATUS "====================================")
 message(STATUS " ")
-message(STATUS "Using GLAD:          ${USE_GLAD}")
+message(STATUS "GLAD:                ${USE_GLAD}")
 message(STATUS "GLFW:                ${ENABLE_GLFW}")
+message(STATUS "Has GLVND:           ${HAS_GLVND}")
 message(STATUS "GLX:                 ${HAS_GLX}")
 message(STATUS "EGL:                 ${HAS_EGL}")
 message(STATUS "CGL:                 ${HAS_CGL}")
