--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,6 +26,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
+
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
         packages: libglvnd-dev libglfw3-dev libglu1-mesa-dev
