--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,6 +34,8 @@ jobs:
         packages: libglvnd-dev libglfw3-dev libglu1-mesa-dev
         version: 1.0
       if: runner.os == 'Linux'
+    - run: brew install glfw
+      if: runner.os == 'macOS'
 
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
