--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -56,3 +56,10 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
 
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v3
+      if: ${{ always() }}
+      with:
+        name: Test Results(${{ matrix.os }})
+        path: |
+          build/Testing/Temporary/LastTest.log
