--- a/.github/workflows/offscreen.yml
+++ b/.github/workflows/offscreen.yml
@@ -57,9 +57,10 @@ jobs:
       run: ctest -C ${{env.BUILD_TYPE}}
 
     - name: Upload Test Results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: ${{ always() }}
       with:
         name: Test Results(${{ matrix.os }})
         path: |
           build/Testing/Temporary/LastTest.log
+          build/out.png
