--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           name: "Create VERSION file"
           command: |
             echo $VERSION > VERSION
+            cat VERSION
       - run:
           name: "Install git-archive-all"
           command: pip install git-archive-all
