--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           path: /tmp/artifacts
           destination: source-tarball
 
-  publish-github-release:
+  publish:
     docker:
       - image: circleci/golang:1.16
     steps:
